[gd_scene load_steps=21 format=2]

[ext_resource path="res://Codigos/cenaPrincipal.gd" type="Script" id=1]
[ext_resource path="res://Imagens/tijolos.png" type="Texture" id=2]
[ext_resource path="res://Imagens/pixil-frame-0.png" type="Texture" id=3]
[ext_resource path="res://Imagens/gatoSpriteIdle.png" type="Texture" id=4]
[ext_resource path="res://Imagens/uranio.png" type="Texture" id=5]
[ext_resource path="res://Imagens/radiacao.png" type="Texture" id=6]
[ext_resource path="res://Imagens/colocarCaixa.png" type="Texture" id=7]
[ext_resource path="res://Imagens/reiniciar.png" type="Texture" id=8]
[ext_resource path="res://Imagens/tirarCaixa.png" type="Texture" id=9]
[ext_resource path="res://Fontes/Burbank Big Condensed Black.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Telas/explicacao.tscn" type="PackedScene" id=11]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("caixa:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 161, 285 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("uranio:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1137, 286 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Radiacao:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Radiacao:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 732, 296 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "caixaEntra"
tracks/0/type = "value"
tracks/0/path = NodePath("caixa:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 161, 285 ), Vector2( 504, 288 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "caixaSai"
tracks/0/type = "value"
tracks/0/path = NodePath("caixa:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 504, 288 ), Vector2( 161, 285 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "uranio"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("uranio:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1137, 286 ), Vector2( 877, 286 ), Vector2( 877, 286 ), Vector2( 1140, 296 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Radiacao:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 2, 2.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Radiacao:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.5, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 732, 296 ), Vector2( 505, 299 ) ]
}

[sub_resource type="DynamicFont" id=8]
size = 53
font_data = ExtResource( 10 )

[sub_resource type="Theme" id=9]
default_font = SubResource( 8 )

[node name="principal" type="Node2D"]
script = ExtResource( 1 )

[node name="fundo" type="TextureRect" parent="."]
margin_right = 1020.0
margin_bottom = 600.0
texture = ExtResource( 2 )
expand = true

[node name="translucido" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.498039 )

[node name="colocar" type="Button" parent="."]
margin_left = 17.0
margin_top = 401.0
margin_right = 593.0
margin_bottom = 977.0
rect_scale = Vector2( 0.35, 0.35 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
icon = ExtResource( 7 )
icon_align = 1

[node name="tirar" type="Button" parent="."]
margin_left = 824.0
margin_top = 401.0
margin_right = 1400.0
margin_bottom = 977.0
rect_scale = Vector2( 0.35, 0.35 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
icon = ExtResource( 9 )
icon_align = 1

[node name="reiniciar" type="Button" parent="."]
margin_left = 414.0
margin_top = 408.0
margin_right = 990.0
margin_bottom = 984.0
rect_scale = Vector2( 0.35, 0.35 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 7 )
icon = ExtResource( 8 )
icon_align = 1

[node name="gato" type="Sprite" parent="."]
position = Vector2( 500, 287 )
texture = ExtResource( 4 )

[node name="caixa" type="Sprite" parent="."]
position = Vector2( 161, 285 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="caixaAnimacao" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/caixaEntra = SubResource( 2 )
anims/caixaSai = SubResource( 3 )
anims/uranio = SubResource( 4 )

[node name="uranio" type="Sprite" parent="."]
position = Vector2( 1137, 286 )
scale = Vector2( 5, 5 )
texture = ExtResource( 5 )

[node name="Radiacao" type="Sprite" parent="."]
visible = false
position = Vector2( 732, 296 )
scale = Vector2( 5, 5 )
texture = ExtResource( 6 )

[node name="estadoGato" type="Label" parent="."]
margin_left = 354.0
margin_top = 17.0
margin_right = 647.0
margin_bottom = 101.0
theme = SubResource( 9 )
text = "O GATO MORREU"
align = 1
valign = 1
uppercase = true

[node name="trans" type="ColorRect" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.478431 )

[node name="explicacao" parent="." instance=ExtResource( 11 )]
visible = false

[connection signal="pressed" from="colocar" to="." method="_on_colocar_pressed"]
[connection signal="pressed" from="tirar" to="." method="_on_tirar_pressed"]
[connection signal="pressed" from="reiniciar" to="." method="_on_reiniciar_pressed"]
[connection signal="animation_finished" from="caixaAnimacao" to="." method="_on_caixaAnimacao_animation_finished"]
